# arxiv-db

./: .gitignore  README.md  hello.py  pyproject.toml
deploys/: agg_arxiv_daily_deploy.py
flows/: agg_arxiv_daily.py  agg_arxiv_daily_flow.py  agg_arxiv_daily_flow.yaml
flows/tools/: app.py  my_arXiv.py  my_notion.py  my_slack.py  paper_info.py
src/: app.py  crawl_arXiv.py  my_LLM.py  my_arXiv.py  my_notion.py  my_slack.py  paper_info.py  request_LLM.py  run_schedule.py  save_to_notion.py
