[project]
name = "arxiv-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "arxiv>=2.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "notion-client>=2.2.1",
    "numpy>=2.1.1",
    "openai>=1.46.1",
    "polars>=1.8.2",
    "prefect>=3.1.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.5.2",
    "slack-sdk>=3.33.1",
]
